--- a/src/App.css
+++ b/src/App.css
@@ -17,8 +17,12 @@
   color: black;
 }
 
+.header h2:hover {
+  color: #ac5afe;
+}
+
 .work {
-  margin-top: 13%;
+  margin-top: 15%;
 }
 
 .work h1 {
@@ -40,7 +44,17 @@
   margin-top: 3%;
 }
 
-.contact h1 {
-  margin-bottom: 3%;
+.education h1 {
   margin-top: 3%;
+  margin-bottom: 3%;
+}
+.education {
+  margin-bottom: 5%;
+}
+.education h4 {
+  color: #ac5afe;
+}
+
+.education h6:hover {
+  color: #ac5afe;
 }
